# startype23

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/startype23/: __init__.py  __main__.py  analyzer.py  bars.py  charts.py  cli.py  colors.py  extensions.py  filter.py  formatting.py  interactive.py  logo.py  tables.py  user_colors.py
