[project]
name = "startype23"
version = "1.1.3"
description = "A CLI tool that analyzes a directory and displays a colourful chart of file type distribution."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "StarType23", email = "charts@startype23.dev" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/startype23/startype23"
Source = "https://github.com/startype23/startype23"
"Bug tracker" = "https://github.com/startype23/startype23/issues"

[project.scripts]
startype23 = "startype23.cli:main"
st23 = "startype23.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/src/media",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
